--- a/package.json
+++ b/package.json
@@ -11,8 +11,18 @@
   "dependencies": {
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "formik": "^2.2.9",
+    "framer-motion": "^7.6.6",
     "next": "13.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-confetti": "^6.1.0",
+    "react-dom": "18.2.0",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
